package edu.hitsz.aircraft;

//敌机抽象工厂
public interface AircraftFactory {
    public EnemyAircraft createAircraftKind();
}
